Proyecto inicial, preparado para trabajar los 3 en equipo

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,8 @@
 extends layout
 
 block content
+  a(href="/tipos") anterior
+  a(href="/if") siguiente
   form#codigo
     label #include &ltstdio.h&gt
     br
