Parte del while funcionando correctamente pero aun por agregar los ejemplos graficos

--- a/views/view_while.jade
+++ b/views/view_while.jade
@@ -1,4 +1,6 @@
 extends layout
 
 block content
-  a.inter-pagina.inter-ant(href="/for_final")
+  a.inter-pagina.inter-ant(href="/for/final") Anterior
+  h1=titulo
+  a.inter-pagina.inter-sig(href="/for/final") Siguiente
