--- a/views/while/bloque.jade
+++ b/views/while/bloque.jade
@@ -19,3 +19,6 @@ block content
     |     sentencia3;
     |     ...
     |   }
+  p.choro
+    | De esta forma todo el bloque despues del ciclo while es interpretado como una unica sentencia y por lo tanto se ejecutará repetidamente
+    | todo lo que se encuentre dentro del mismo.
