--- a/views/while/inicio.jade
+++ b/views/while/inicio.jade
@@ -12,12 +12,12 @@ block content
     | while(condicion)
     |   sentencia;
   p.choro
-    | En el ejemplo anterior la
-    span
-      | sentencia
-    | se ejecutará simpre que la
-    span
-      | condicion
+    | En el ejemplo anterior la 
+    span(style="font-family: Menlo,Monaco,Consolas,'Courier New',monospace; font-weight: bold")
+      | sentencia 
+    | se ejecutará simpre que la 
+    span(style="font-family: Menlo,Monaco,Consolas,'Courier New',monospace; font-weight: bold")
+      | condicion 
     | sea verdadera.
     | En el siguiente ejemplo la sentencia se ejecutará siempre ya que la condicion siempre es verdadera. Esto es lo que se llama
     | un ciclo infinito (jamás termina).
