--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,4 +8,5 @@ html
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js")
     script(src='/javascripts/script.js')
   body
-    block content
+    .container
+      block content
