ciclo while tentativamente terminado, falta revision y vobo

--- a/views/while/bloque.jade
+++ b/views/while/bloque.jade
@@ -2,8 +2,8 @@ extends ../layout
 
 block content
   .navegacion
-    a.anterior(href='/while/multiple') Anterior
-    a.siguiente.pull-right(href='/while/usos') Siguiente
+    a.anterior(href='/while/multiple_ejemplos') Anterior
+    a.siguiente.pull-right(href='/while/bloque_ejemplos') Siguiente
   h1 Pero, ¿Y si quiero que se repita más de una sentencia?
   p.choro
     | Para lograr que se repita entonces más de una sentencia será necesario encerrar todas las sentencias que se deseen ejecutar dentro de 
