--- a/views/while/multiple.jade
+++ b/views/while/multiple.jade
@@ -2,7 +2,7 @@ extends ../layout
 
 block content
   .navegacion
-    a.anterior(href='/while/inicio') Anterior
+    a.anterior(href='/while/inicio_ejemplos') Anterior
     a.siguiente.pull-right(href='/while/multiple_ejemplos') Siguiente
   h1 ¿Qué pasa si hay más de una sentencia despues del while?
   p.choro
